fixed contact on mobile and added some hover func to cards

--- a/src/styles/blocks/card.sass
+++ b/src/styles/blocks/card.sass
@@ -1,5 +1,9 @@
+
+a
+	text-decoration: none
+	color: $main-color
+
 .projects_container
-	
 	width: 100%
 	
 	
@@ -18,6 +22,11 @@
 	box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.08)
 	overflow: hidden;
 	border-radius: 10px
+	transition: .2s all
+	&:hover
+		box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.18)
+		transform: scale(1.02)
+
 
 .card__image
 	display: block
@@ -38,7 +47,7 @@
 		left: 0
 		width: 100%
 		height: 100%
-		background-color: rgba(white, 0.7)
+		background-color: rgba($main-color, 0.04)
 
 	&:after
 		width: 80px
@@ -80,11 +89,11 @@
 		width: 100%
 		display: flex
 		justify-content: center
-		padding: 1em
+		padding: 1em 1em 0.2em 1em
 		background-color: white
 		h2
 			color: $main-color
-			font-size: 22px
+			font-size: 18px
 			line-height: 1.4
 			padding: 0
 			margin: 0
@@ -95,6 +104,8 @@
 		justify-content: center
 		padding: 1em
 		background-color: white
+		h3
+			font-size: 14px
 			
 
 	
@@ -109,3 +120,12 @@
 		.projects_wrapper
 				width: 980px
 				margin: 0px 0px 0px calc((100% - 980px) * 0.5)
+	.card_description
+		.card_description_title
+			h2
+				font-size: 22px
+		.card_description_content
+			h3
+				font-size: 16px
+	
+		
