--- a/src/styles/blocks/contact.sass
+++ b/src/styles/blocks/contact.sass
@@ -10,21 +10,22 @@
         margin-top: 0
         left: 0
         margin-left: 0
-        width: 980px
+        width: 100%
         display: flex
         align-items: center
         height: 100%
         .contact_text
             display: flex
             width: 100%
+            flex-direction: column
             margin-bottom: 5em
-            justify-content: space-between
+            justify-content: space-evenly
             align-items: center
             color: $main-color
             h1
-                font-size: 26px
+                font-size: 20px
                 font-weight: 600
-                margin: 0
+                margin: 0 0 20px 0
                 
             h2
                 font-weight: 200
@@ -41,7 +42,7 @@
                 font-weight: 200
                 font-size: 16px
             .contact_social
-                padding-right: 100px
+                padding-right: 0px
                 a
                     text-decoration: none
             .contact_button
@@ -62,11 +63,19 @@
 
 
 
-@media screen and (min-width: 740px)
+@media screen and (min-width: 980px)
     .contact_container
         min-width: 980px
         margin-left: 15px
         .contact_content
+            width: 980px
             margin: 0px 0px 0px calc((100% - 980px) * 0.5)
-                
+            .contact_text
+                justify-content: space-between
+                flex-direction: row
+                .contact_social
+                    padding-right: 100px
+                h1
+                    font-size: 26px
+                    margin: 0
 
