--- a/src/styles/blocks/sheet.sass
+++ b/src/styles/blocks/sheet.sass
@@ -21,8 +21,8 @@
   &.jengar
   &.podtalk
   &.vizstudent
-    background-color: green
   &.vizgapm
+  &.badplatser
   &.lightsphere
 .sheet__inner__container
   width: 100vw;
